<resources>
    <string name="app_name">UVLive</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Acceder</string>


    <string name="notification_messages_title">UVLive</string>
    <string name="notification_publi_channel">Publicidad</string>
    <string name="notification_conversations_channel">Conversaciones nuevas</string>
    <string name="notification_messages_channel">Mensajes nuevos</string>
    <string name="notification_messages_bigContentTitle">Tienes mensajes nuevos</string>
    <string name="notification_messages_text">Tienes %1$d mensajes nuevos</string>

    <string name="notification_new_conversation_title">Se ha creado el canal %1$s</string>
    <string name="notification_new_conversation_title_alt">Se ha creado un nuevo canal</string>
    <string name="notification_new_conversation_text">Tienes una nueva conversación</string>

    <!-- Error messages -->
    <string name="error_unknown">Se ha producido un error</string>
    <string name="error_wrong_credentials">Las credenciales introducidas no son correctas</string>
    <string name="error_unauthorized">No tienes permisos para realizar la acción</string>
    <string name="error_token_expired">Su sesión ha caducado</string>

    <!-- Forms -->
    <string name="button_register">Registrar</string>

    <!-- Register form -->
    <string name="register_dni">DNI</string>
    <string name="register_user_name">Nombre de usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_password_1">Contraseña</string>
    <string name="register_password_2">Repetir contraseña</string>
    <string name="register_merchant_success">Comerciante "%s" registrado correctamente</string>
    <string name="register_merchant_error">Error al registrar el comerciante</string>

    <!-- Merchant fragment -->
    <string name="broadcast_title">Título</string>
    <string name="broadcast_text">Texto</string>
    <string name="broadcast_send">Registrar difusión</string>
    <string name="send_broadcast_warning">Complete los campos</string>
    <string name="send_broadcast_ok">Su mensaje se ha registrado con éxito</string>
    <string name="send">Enviar</string>

    <string name="exit">Salir</string>
    <string name="block_student">Bloquear alumno</string>
    <string name="unblock_student">Desbloquear alumno</string>

    <string name="init_conversation">Iniciar conversación</string>

    <string name="logintypes_student">Estudiante</string>
    <string name="logintypes_teacher">Profesor</string>
    <string name="logintypes_admin">Administrador</string>
    <string name="logintypes_merchant">Comerciante</string>

    <string name="modify_merchant_searchbar_placeholder">Nombre del comerciante</string>
    <string name="results_not_found">No se han encontrado resultados</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_getting_conversation">Error cargando los mensajes</string>

    <!-- Messages -->
    <string name="messages_send">Send</string>
    <string name="error_user_defined">El usuario ya existe</string>
    <string name="error_user_not_defined">El usuario no exste</string>
    <string name="error_parameters_incorrect">Su petición no es correcta</string>
    <string name="error_conversation_not_exists">La conversación no existe</string>
    <string name="error_user_blocked">Has sido bloqueado por el administrador</string>
    <string name="error_merchant_not_exists">El comerciante no existe</string>
    <string name="message_blocked_text">Mensaje no enviado por estar bloqueado</string>

</resources>
