<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_title"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/fragment_merchant_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_text"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/fragment_merchant_text"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="15"
        android:imeOptions="actionUnspecified"
        android:minHeight="150dp"
        android:inputType="text" />
    <Button
        android:id="@+id/fragment_merchant_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_send"
        android:textAllCaps="false" />
</LinearLayout>